[package]
name = "nexus-revo-io"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
description = "Library for Nexus Revo RF protocol"
keywords = ["ftdi", "cc1101", "teledildonics"]
categories = ["hardware-support"]
license = "MIT"
repository = "https://github.com/CirrusNeptune/nexus-revo-io.git"
documentation = "https://docs.rs/nexus-revo-io"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
bitstream-io = "^1.0.0"
num-derive = "^0.3.3"
num-traits = "^0.2.14"

[dev-dependencies]
version-sync = "~0.9.2"
pretty_env_logger = "~0.4.0"
libftd2xx = { git = "https://github.com/CirrusNeptune/libftd2xx-rs", branch = "mpsse-macro" }
libftd2xx-cc1101 = { git = "https://github.com/CirrusNeptune/libftd2xx-cc1101", branch = "main" }

[features]
static = ["libftd2xx/static", "libftd2xx-cc1101/static"]
