[package]
name = "nexus-revo-io"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
description = "Library for Nexus Revo RF protocol"
keywords = ["ftdi", "cc1101", "teledildonics"]
categories = ["hardware-support"]
license = "MIT"
repository = "https://github.com/CirrusNeptune/nexus-revo-io.git"
documentation = "https://docs.rs/nexus-revo-io"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
bitstream-io = "2.2.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
libftd2xx = "0.32.3"
libftd2xx-cc1101 = { version = "0.1.0", path = "../libftd2xx-cc1101" }
tokio = { version = "1.36.0", features = ["net", "sync", "rt-multi-thread", "macros", "io-util"] }

[dev-dependencies]
version-sync = "0.9.5"
pretty_env_logger = "0.5.0"
libftd2xx = "0.32.3"
libftd2xx-cc1101 = { version = "0.1.0", path = "../libftd2xx-cc1101" }

[features]
static = ["libftd2xx/static", "libftd2xx-cc1101/static"]
